# fosslight_dependency_scanner

./: .bumpversion.cfg  .coderabbit.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  REUSE.toml  ReleaseNote.md  ReleaseNote.old.md  THIRD_PARTY_NOTICE  build.spec  cli.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_exe.yml  publish-release.yml  pull-request.yml  python-publish.yml  release-drafter.yml  release-publish.yml
.reuse/: dep5
LICENSES/: LicenseRef-3rd-party-licenses.txt  LicenseRef-3rd_party_licenses.txt
docs/: user-guide.md  user-guide_Kor.md
hooks/: hook-fosslight_dependency.py
src/fosslight_dependency/: _analyze_dependency.py  _graph_convertor.py  _help.py  _package_manager.py  _version.py  analyze_dependency.py  cli.py  constant.py  dependency_item.py  run_dependency_scanner.py
tests/pytest/: conftest.py
tests/test_cargo/: tmp_cargo_fosslight_output.json
tests/test_carthage/: Cartfile.resolved
tests/test_exclude/: requirements.txt  tmp_deps.json  tmp_no_dev_deps.txt
tests/test_helm/: Chart.yaml  values.yaml
tests/test_maven_custom_repo/: pom.xml
tests/test_mod/: go.mod
tests/test_npm1/: package.json
tests/test_npm2/: package.json
tests/test_nuget/: test_nuget_proj.csproj
tests/test_nuget2/: packages.config
unified_script/: dependency_unified.py
(+76 files in other folders)
